--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/vue-query": "^5.81.5",
+    "lodash.debounce": "^4.0.8",
     "qrcode.vue": "^3.6.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17"
