Add new dependencies, enhance UI components, and implement transaction modal functionality

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/vue-query": "^5.81.5",
     "lodash.debounce": "^4.0.8",
+    "lucide-vue-next": "^0.525.0",
     "qrcode.vue": "^3.6.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17"
